--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
 
     implementation 'com.facebook.android:facebook-login:4.34.0'
@@ -33,8 +33,10 @@ dependencies {
 
     // Standard Square Kotlin networking stack
     implementation 'com.squareup.moshi:moshi:1.6.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.6.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
