NUKED ALL THE KOTLIN :(
> https://www.youtube.com/watch?v=g3ENX3aHlqU
- 33937 methods now down to 27467 methods!
- Yes, I did test these changes. No regressions!
- Also, I made all the activities portrait only

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,14 +31,19 @@
                 <data android:scheme="@string/fb_login_protocol_scheme"/>
             </intent-filter>
         </activity>
-        <activity android:name=".login.LoginActivity">
+
+        <activity
+            android:name=".login.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".home.HomeActivity">
+        <activity
+            android:name=".home.HomeActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
