--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 27
@@ -23,18 +20,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
 
     implementation 'com.facebook.android:facebook-login:4.34.0'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
-    kapt 'com.jakewharton:butterknife-compiler:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     // Standard Square Kotlin networking stack
     implementation 'com.squareup.moshi:moshi:1.6.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.6.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 
