(Roughly) finished GooglePlacesClient
- Created stubbed LocationManager to feed the Google API request a location
- Refactored RetrofitBuilderFactory code to take in interceptors
- Reorganized code due to the several additional files being created for the Google Places client
- Stopped tracking gradle.properties to prevent people from hijacking my Google Places API key (it's linked to my credit card...)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,13 +11,18 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+            buildConfigField("String", "GOOGLE_API_KEY", GOOGLE_API_KEY)
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
         release {
             minifyEnabled false
+            buildConfigField("String", "GOOGLE_API_KEY", GOOGLE_API_KEY)
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
