Added Camera part of the camer flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.savory">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -52,6 +53,11 @@
         </activity>
         <activity
             android:name=".settings.SettingsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+        </activity>
+        <activity
+            android:name=".camera.CameraActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
         </activity>
