--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.savory">
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.savory">
 
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
@@ -19,9 +22,11 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"/>
+
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
 
@@ -31,36 +36,41 @@
                 <data android:scheme="@string/fb_login_protocol_scheme"/>
             </intent-filter>
         </activity>
+
         <activity
             android:name=".login.LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/LoginTheme">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity
             android:name=".home.HomeActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
         </activity>
+
         <activity
             android:name=".restaurant.RestaurantPickerActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
         </activity>
+
         <activity
             android:name=".settings.SettingsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
         </activity>
+
         <activity
             android:name=".camera.CameraActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
         </activity>
     </application>
-
 </manifest>
