--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,9 @@
         </activity>
 
         <activity
-            android:name=".upload.UploadDishActivity"
+            android:name=".upload.RequiredDishInfoActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:screenOrientation="portrait">
         </activity>
     </application>
