--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.savory"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         debug {
@@ -25,13 +24,15 @@ android {
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
 
-    implementation 'com.facebook.android:facebook-login:4.34.0'
+    implementation ('com.facebook.android:facebook-login:4.34.0') {
+        exclude group: 'com.android.support'
+    }
 
     implementation 'com.jakewharton:butterknife:8.8.1'
-    implementation 'com.android.support:support-v4:27.1.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     // Standard Square networking stack
@@ -40,13 +41,21 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation ('com.squareup.picasso:picasso:2.71828') {
+        exclude group: 'com.android.support'
+    }
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
-    implementation 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
-    implementation 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
+    implementation ('com.joanzapata.iconify:android-iconify-fontawesome:2.2.2') {
+        exclude group: 'com.android.support'
+    }
+    implementation ('com.joanzapata.iconify:android-iconify-ionicons:2.2.2') {
+        exclude group: 'com.android.support'
+    }
 
-    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    implementation ('com.afollestad.material-dialogs:core:0.9.6.0') {
+        exclude group: 'com.android.support'
+    }
 
     // Be careful updating to 15.0.1, it doesn't seem to be actually published yet
     implementation 'com.google.android.gms:play-services-location:15.0.0'
